// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building descriptor source map with optional map type should have line, column, text for each property 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityNamespaceName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "identityProperties": Array [],
  "isMapTypeOptional": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with optional map type",
  },
  "isMapTypeRequired": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "mapTypeEnumeration": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with optional map type",
  },
  "metaEdId": Object {
    "column": 24,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 13,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Descriptor",
  },
}
`;

exports[`when building descriptor source map with required map type should have source map with line, column, text for each property 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityNamespaceName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "identityProperties": Array [],
  "isMapTypeOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isMapTypeRequired": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with map type",
  },
  "mapTypeEnumeration": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with map type",
  },
  "metaEdId": Object {
    "column": 24,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 13,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Descriptor",
  },
}
`;

exports[`when building descriptor with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'role name', 'with optional map type', 'with map type'}, column: 0, line: 9, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'role name', 'with optional map type', 'with map type'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building descriptor with lowercase descriptor name should have extraneous input error 1`] = `
Array [
  "mismatched input 'e' expecting ID, column: 13, line: 2, token: e",
  "mismatched input 'e' expecting ID, column: 13, line: 2, token: e",
]
`;

exports[`when building descriptor with no descriptor name should have extraneous input error 1`] = `
Array [
  "missing ID at '[1]', column: 14, line: 2, token: [1]",
  "missing ID at '[1]', column: 14, line: 2, token: [1]",
]
`;

exports[`when building descriptor with no documentation in map type should have mismatched input error 1`] = `
Array [
  "mismatched input 'item' expecting 'documentation', column: 6, line: 6, token: item",
  "mismatched input 'item' expecting 'documentation', column: 6, line: 6, token: item",
]
`;

exports[`when building descriptor with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'integer' expecting 'documentation', column: 4, line: 3, token: integer",
  "mismatched input 'integer' expecting 'documentation', column: 4, line: 3, token: integer",
]
`;

exports[`when building descriptor with no enumeration item in map type should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting 'item', column: 0, line: 8, token: End Namespace",
  "mismatched input 'End Namespace' expecting 'item', column: 0, line: 8, token: End Namespace",
]
`;

exports[`when building map type enumeration item source map should have line, column, text for each property 1`] = `
Object {
  "documentation": Object {
    "column": 8,
    "line": 13,
    "tokenText": "documentation",
  },
  "metaEdId": Object {
    "column": 30,
    "line": 12,
    "tokenText": "[2]",
  },
  "metaEdName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortDescription": Object {
    "column": 11,
    "line": 12,
    "tokenText": "\\"ShortDescription\\"",
  },
  "type": Object {
    "column": 6,
    "line": 12,
    "tokenText": "item",
  },
  "typeHumanizedName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
}
`;

exports[`when building multiple descriptors should have validation failures for each entity: when building duplicate descriptors should have validation failures for each entity -> Descriptor 1 message 1`] = `"Descriptor named EntityName is a duplicate declaration of that name."`;

exports[`when building multiple descriptors should have validation failures for each entity: when building duplicate descriptors should have validation failures for each entity -> Descriptor 1 sourceMap 1`] = `
Object {
  "column": 13,
  "line": 9,
  "tokenText": "EntityName",
}
`;

exports[`when building multiple descriptors should have validation failures for each entity: when building duplicate descriptors should have validation failures for each entity -> Descriptor 2 message 1`] = `"Descriptor named EntityName is a duplicate declaration of that name."`;

exports[`when building multiple descriptors should have validation failures for each entity: when building duplicate descriptors should have validation failures for each entity -> Descriptor 2 sourceMap 1`] = `
Object {
  "column": 13,
  "line": 2,
  "tokenText": "EntityName",
}
`;

exports[`when building required map type enumeration source map should have line, column, text for each property 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityNamespaceName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 10,
    "tokenText": "documentation",
  },
  "enumerationItems": Array [
    Object {
      "column": 6,
      "line": 12,
      "tokenText": "item",
    },
  ],
  "identityProperties": Array [],
  "mapTypeEnumeration": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with map type",
  },
  "metaEdId": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 4,
    "line": 9,
    "tokenText": "with map type",
  },
}
`;
